<resources>
    <string name="app_name">Hipeople</string>

    <!--MainActivity (로그인 화면)-->
    <string name="main_signup">회원가입</string>
    <string name="main_signup_explanation">아직 회원이 아니신가요 ?</string>
    <string name="main_login">Login</string>
    <string name="main_id_hint">ID</string>
    <string name="main_password_hint">Password</string>
    <string name="main_btn_login">로그인</string>
    <string name="main_error_password">패스워드를 확인해주세요</string>
    <string name="main_error_id">가입된 정보가 없습니다</string>
    <string name="main_error_empty">아이디 혹은 패스워드를 입력해 주세요</string>
    <string name="main_error_email">이메일 형식을 지켜주세요(예 : test@test.com )</string>

    <!--RegisterActivity (로그인 화면)-->
    <string name="register_explanation">이메일로 회원가입</string>
    <string name="register_id_hint">ID 입력</string>
    <string name="register_id_password">PW 입력</string>
    <string name="register_password_confirm">영문 대소문자, 숫자 특수문자 포함 8자리 이상 입력해주세요.</string>
    <string name="register_password_check_hint">PW 재입력</string>
    <string name="register_password_check_confirm">비밀번호가 서로 일치하지 않습니다.</string>
    <string name="register_btn_next">완료</string>
    <string name="register_error_id_pattern">아이디 형식이 올바르지 않습니다. ex) XXXXX@gmail.com</string>
    <string name="register_error_id_exist">중복된 아이디입니다.</string>
    <string name="register_success_id">사용 가능한 아이디 입니다</string>
    <string name="register_success_password">사용 가능한 비밀번호 입니다</string>
    <string name="register_id_input">아이디 입력 중</string>

    <string name="info_name">매력적인 프로필을 위해 프로필을 완성해주세요!</string>
    <string name="change_succes">수정이 완료 되었습니다.</string>

    <string name="gender_alert_dialog_title">주의!</string>
    <string name="gender_alert_dialog_message">지금 중지하면 회원가입부터 다시 해야 해요!
그래도 나가시겠습니까?</string>
    <string name="gender_alert_dialog_positive">프로필 계속 만들기</string>
    <string name="gender_alert_dialog_negative">네</string>
</resources>